# girl

./: .env.example  .gitignore  CLAUDE.md  STYLE_SYSTEM_ARCHITECTURE.md  TAILORED_BUILD_PLAN.md  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
docs/: TRAVEL_AGENT_IMPLEMENTATION_PLAN.md
src/: __init__.py  cli.py
src/agent/: __init__.py  fallbacks.py  graph.py  state.py
src/agent/tools/: __init__.py  places.py  preferences.py  registry.py  stylist.py
src/bot/: __init__.py  app.py  handlers.py  photo_handler.py
src/cache/: __init__.py  redis.py  session.py
src/config/: logging.py  settings.py
src/services/: __init__.py  places.py  resilience.py  vision.py
tests/: __init__.py  conftest.py  test_agent.py  test_bot.py  test_cache.py  test_cli.py  test_config.py  test_fallbacks.py  test_photo_handler.py  test_pipeline.py  test_resilience.py  test_tools_places.py  test_tools_preferences.py
