[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "girlbot"
version = "0.1.0"
description = "AI Stylist & Wellness Assistant - Telegram Bot"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "GirlBot Team"}
]
keywords = ["telegram", "bot", "ai", "stylist", "fashion", "fitness"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications :: Chat",
]

dependencies = [
    "python-telegram-bot[all]>=22.0",
    "langgraph>=0.4.0",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langsmith>=0.3.0",
    "openai>=1.50.0",
    "anthropic>=0.40.0",
    "redis[hiredis]>=5.0.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",
    "pybreaker>=1.2.0",
    "aiolimiter>=1.1.0",
    "tenacity>=9.0.0",
    "structlog>=24.4.0",
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "black>=24.10.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "fakeredis>=2.20.0",
]
travel = [
    "amadeus>=9.0.0",
]
database = [
    "supabase>=2.10.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "pgvector>=0.3.0",
]

[project.scripts]
girlbot = "src.cli:main"

[project.urls]
Homepage = "https://github.com/girlbot/girlbot"
Documentation = "https://github.com/girlbot/girlbot#readme"
Repository = "https://github.com/girlbot/girlbot"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ["py312"]
